# wrt

./: .env.development  .env.example  .env.production  .gitignore  CONTRIBUTING.md  Cargo.toml  DEFAULT_IMPLEMENTATIONS.md  Dockerfile  Makefile.toml  README.md  REFACTORING.md  RELEASES.md  clippy.toml  compose.yaml  deny.toml  expanded.rs  expanded.txt  rust-toolchain.toml  taplo.toml  tmp.txt
.cargo/: config.toml
.github/: copilot-instructions.md  release.yaml
.github/workflows/: audit.yaml  ci.yaml  crates.yaml  patch.yaml  publish.yaml  release.yaml
crates/azkeyvault/: Cargo.toml
crates/be-azure/: Cargo.toml
crates/be-azure/src/: key_vault.rs  lib.rs
crates/be-kafka/: Cargo.toml
crates/be-mongodb/: Cargo.toml
crates/be-nats/: Cargo.toml
crates/be-opentelemetry/: Cargo.toml  README.md
crates/be-opentelemetry/src/: lib.rs  otel.rs
crates/be-postgres/: Cargo.toml  README.md
crates/be-postgres/src/: lib.rs  sql.rs  types.rs
crates/be-redis/: Cargo.toml  README.md
crates/be-redis/src/: keyvalue.rs  lib.rs
crates/build-macro/: Cargo.toml  README.md
crates/buildgen/: Cargo.toml  README.md  example.rs
crates/codegen/: Cargo.toml  README.md
crates/codegen/src/: lib.rs
crates/fabric/: Cargo.toml
crates/guest-macro/: Cargo.toml
crates/kernel/: Cargo.toml  README.md
crates/kernel/src/: create.rs  error.rs  lib.rs  traits.rs
crates/messaging-nats/: Cargo.toml
crates/messaging-nats/src/: blobstore.rs  client.rs  keyvalue.rs  lib.rs  messaging.rs
crates/mongodb/: Cargo.toml
crates/nats/: Cargo.toml
crates/res-azkeyvault/: Cargo.toml  README.md
crates/res-azkeyvault-next/: Cargo.toml
crates/res-azkeyvault/src/: lib.rs  vault.rs
crates/res-azure/: Cargo.toml  README.md
crates/res-azure/src/: identity.rs  key_vault.rs  lib.rs
crates/res-kafka/: Cargo.toml  README.md
crates/res-kafka/src/: lib.rs  messaging.rs  partitioner.rs  registry.rs  schema_registry.rs  subscriber.rs
crates/res-mongodb/: Cargo.toml  README.md
crates/res-mongodb-next/: Cargo.toml
crates/res-mongodb-next/src/: blobstore.rs
crates/res-mongodb/src/: blobstore.rs  lib.rs
crates/res-nats/: Cargo.toml
crates/res-nats-next/: Cargo.toml
crates/res-nats-next/src/: blobstore.rs  keyvalue.rs  lib.rs  messaging.rs
crates/res-nats/src/: blobstore.rs  keyvalue.rs  lib.rs  messaging.rs
crates/res-postgres/: Cargo.toml  README.md
crates/res-postgres/src/: lib.rs  sql.rs
crates/res-redis/: Cargo.toml  README.md
crates/res-redis/src/: keyvalue.rs  lib.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime-error/: Cargo.toml
crates/runtime-error/src/: error.rs  lib.rs
crates/runtime/src/: cli.rs  error.rs  http_ctx.rs  lib.rs  runtime.rs  runtime_next.rs  state.rs  traits.rs
crates/sdk-http/: Cargo.toml  README.md
crates/sdk-http/src/: cache.rs  client.rs  lib.rs  router.rs
crates/sdk-http/wit/: world.wit
crates/sdk-otel/: Cargo.toml  README.md
crates/sdk-otel-attr/: Cargo.toml  README.md
crates/sdk-otel-attr/src/: lib.rs
crates/sdk-otel/src/: export.rs  init.rs  lib.rs
crates/sdk-otel/src/export/: metrics.rs  tracing.rs
crates/sdk-otel/src/init/: metrics.rs  tracing.rs
crates/sdk-otel/wit/: deps.toml  world.wit
crates/utils/: Cargo.toml
crates/utils/src/: messaging.rs
crates/warp/: Cargo.toml
crates/warp-sdk/: Cargo.toml
crates/warp-sdk/src/: api.rs  lib.rs
crates/warp-sdk/src/api/: request.rs
crates/wasi-blobstore/: Cargo.toml  README.md
crates/wasi-blobstore-mdb/: Cargo.toml  README.md
crates/wasi-blobstore-mdb/src/: lib.rs
crates/wasi-blobstore-mdb/wit/: deps.toml  world.wit
crates/wasi-blobstore-nats/: Cargo.toml  README.md
crates/wasi-blobstore-nats/src/: lib.rs
crates/wasi-blobstore-nats/wit/: world.wit
crates/wasi-blobstore-next/: Cargo.toml
crates/wasi-config/: Cargo.toml
crates/wasi-config/src/: guest.rs  host.rs
crates/wasi-config/src/host/: default_impl.rs
crates/wasi-config/wit/: deps.toml  world.wit
crates/wasi-http/: Cargo.toml
crates/wasi-http-next/: Cargo.toml  README.md
crates/wasi-http/src/: guest.rs  host.rs  lib.rs
crates/wasi-http/src/guest/: builder.rs  cache.rs  client.rs  incoming.rs  outgoing.rs  uri.rs
crates/wasi-http/src/guest/builder/: client.rs  identity.rs  request.rs  response.rs
crates/wasi-http/src/guest/client/: identity.rs  request.rs  uri.rs
crates/wasi-http/src/host/: default_ctx.rs  default_impl.rs  proxy.rs  server.rs
crates/wasi-identity/: Cargo.toml  README.md
crates/wasi-keyvalue/: Cargo.toml
crates/wasi-keyvalue-nats/: Cargo.toml
crates/wasi-keyvalue-next/: Cargo.toml  README.md
crates/wasi-messaging/: Cargo.toml  README.md
crates/wasi-messaging-kafka/: Cargo.toml
crates/wasi-messaging-nats/: Cargo.toml
crates/wasi-otel/: Cargo.toml  README.md
crates/wasi-otel-attr/: Cargo.toml
crates/wasi-otel-next/: Cargo.toml  README.md
crates/wasi-proxy-nats/: Cargo.toml  README.md
crates/wasi-sql/: Cargo.toml
crates/wasi-sql-next/: Cargo.toml
crates/wasi-vault/: Cargo.toml
crates/wasi-vault-az/: Cargo.toml
crates/wasi-vault-next/: Cargo.toml
crates/wasi-websockets/: Cargo.toml  README.md
crates/wit-bindings/: Cargo.toml  README.md
docker/: README.md  kafka.yaml  mongodb.yaml  nats.yaml  opentelemetry.yaml  otelcol.yaml  postgres.yaml  redis.yaml  resources.yaml  service.yaml
docs/: Architecture.md
examples/: Cargo.toml  README.md  blobstore.rs  compose.yaml  http.rs  http_websockets.rs  keyvalue.rs  otel.rs  proxy.rs  pub_sub.rs  request_reply.rs  vault.rs  websockets.rs
examples/blobstore-mongodb/: .env.example  Cargo.toml  README.md  lib.rs  main.rs  mongodb.yaml
scripts/: env-run.sh  env.sh  run-example.sh  test_examples.sh
src/: compiler.rs  config.rs  env.rs  examples.rs  keyvalue.rs  lib.rs  main.rs  minimal.rs  next.rs  realtime-http.rs  realtime-websockets.rs  realtime.rs  rt_minimal.rs  rt_standard.rs  rt_websockets.rs  runtime.rs  standard.rs  traits.rs  websockets.rs  wg_all.rs
supply-chain/: audits.toml  config.toml
tests/: examples.rs
wit/: README.md  deps.toml
(+465 files in other folders)
