[package]
name = "wasm-cli"
description = "Wasm runtime CLI"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

default-run = "wasm-cli"

[[bin]]
name = "wasm-cli"
path = "src/main.rs"
required-features = ["http", "identity", "otel"]

[[bin]]
name = "realtime"
path = "src/realtime.rs"
required-features = [
    "http",
    "identity",
    "keyvalue",
    "messaging",
    "otel",
    "vault",
    "opentelemetry",
    "redis",
    "kafka",
    "azure",
]

[[bin]]
name = "realtime-http"
path = "src/realtime-http.rs"
required-features = [
    "http",
    "keyvalue",
    "otel",
    "opentelemetry",
    "redis",
]

[features]
default = ["jit", "http"]

# WASI components (not intended to be used directly)
blobstore = ["dep:wasi-blobstore"]
http = ["dep:wasi-http", "dep:wasmtime-wasi-http"]
identity = ["dep:wasi-identity"]
keyvalue = ["dep:wasi-keyvalue"]
messaging = ["dep:wasi-messaging"]
otel = ["dep:wasi-otel"]
sql = ["dep:wasi-sql"]
vault = ["dep:wasi-vault"]
websockets = ["dep:wasi-websockets"]

# Component resources (not intended to be used directly)
azure = ["dep:be-azure"]
kafka = ["dep:be-kafka"]
mongodb = ["dep:be-mongodb"]
nats = ["dep:be-nats"]
opentelemetry = ["dep:be-opentelemetry"]
postgres = ["dep:be-postgres"]
redis = ["dep:be-redis"]

# Enables just-in-time wasm to machine code compilation.
jit = ["kernel/jit"]

[dependencies]
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64ct.workspace = true
bytes.workspace = true
fromenv.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
be-azure = { workspace = true, optional = true }
be-mongodb = { workspace = true, optional = true }
be-kafka = { workspace = true, optional = true }
be-nats = { workspace = true, optional = true }
be-opentelemetry = { workspace = true, optional = true }
be-postgres = { workspace = true, optional = true }
be-redis = { workspace = true, optional = true }
kernel.workspace = true
tokio = { workspace = true, features = ["macros"] }
wasi-blobstore = { workspace = true, optional = true }
wasi-http = { workspace = true, optional = true }
wasi-identity = { workspace = true, optional = true }
wasi-keyvalue = { workspace = true, optional = true }
wasi-messaging = { workspace = true, optional = true }
wasi-otel = { workspace = true, optional = true }
wasi-sql = { workspace = true, optional = true }
wasi-vault = { workspace = true, optional = true }
wasi-websockets = { workspace = true, optional = true }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http = { workspace = true, optional = true }
buildgen.workspace = true

# required for azure_identity, etc.
openssl = { version = "0.10.75", features = ["vendored"] }

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
base64ct.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
opentelemetry.workspace = true
serde_json.workspace = true
tower-http.workspace = true
wasi-blobstore.workspace = true
wasi-http.workspace = true
wasi-identity.workspace = true
wasi-keyvalue.workspace = true
wasi-messaging.workspace = true
wasi-otel.workspace = true
wasi-sql.workspace = true
wasi-vault.workspace = true
wasi-websockets.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true

[[example]]
name = "blobstore"
path = "examples/blobstore/lib.rs"
crate-type = ["cdylib"]
required-features = ["blobstore"]

[[example]]
name = "http"
path = "examples/http/lib.rs"
crate-type = ["cdylib"]
required-features = ["http"]

[[example]]
name = "http-proxy"
path = "examples/http-proxy/lib.rs"
crate-type = ["cdylib"]
required-features = ["http"]

[[example]]
name = "identity"
path = "examples/identity/lib.rs"
crate-type = ["cdylib"]
required-features = ["identity"]

[[example]]
name = "keyvalue"
path = "examples/keyvalue/lib.rs"
crate-type = ["cdylib"]
required-features = ["keyvalue"]

[[example]]
name = "messaging"
path = "examples/messaging/lib.rs"
crate-type = ["cdylib"]
required-features = ["messaging"]

[[example]]
name = "otel"
path = "examples/otel/lib.rs"
crate-type = ["cdylib"]
required-features = ["otel"]

[[example]]
name = "sql"
path = "examples/sql/lib.rs"
crate-type = ["cdylib"]
required-features = ["sql"]

[[example]]
name = "vault"
path = "examples/vault/lib.rs"
crate-type = ["cdylib"]
required-features = ["vault"]

[[example]]
name = "websockets"
path = "examples/websockets/lib.rs"
crate-type = ["cdylib"]
required-features = ["websockets"]

[profile.release]
lto = true
opt-level = "s"
strip = true

[package.metadata.cargo-machete]
ignored = ["openssl"]

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
categories = ["runtime", "wasi", "wasm"]
edition = "2024"
homepage = "https://credibil.io"
keywords = ["decentralized", "identity"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/credibil/wrt"
rust-version = "1.91"
version = "0.19.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
# missing_docs = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
cargo = "warn"
nursery = "warn"
pedantic = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", default-features = false, features = ["json"] }
base64ct = { version = "1.8.0", features = ["std"] }
bytes = "1.10.1"
cfg-if = "1.0.3"
chrono = "0.4.42"
csv = "1.4.0"
fromenv = "0.1.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.7.0"
hyper-util = "0.1.17"
opentelemetry = "0.31.0"
opentelemetry-proto = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["experimental_metrics_custom_reader"] }
parking_lot = "0.12"
proc-macro2 = "1.0.101"
quote = "1.0.40"
rand = "0.9.2"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0.106", features = ["parsing"] }
time = "0.3.44"
tokio = { version = "1.47.1", default-features = false }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
wasip3 = { version = "0.3.1", features = ["http-compat"] }
wasmtime = { version = "40.0.0", default-features = false, features = ["component-model-async", "parallel-compilation"] }
wasmtime-wasi = { version = "40.0.0", features = ["p3"] }
wasmtime-wasi-http = { version = "40.0.0", features = ["p3"] }
wasmtime-wasi-io = "40.0.0"
wit-bindgen = { version = "0.49.0", features = ["async-spawn"] }

# credibil registry
credibil-encoding = { version = "0.6.0", registry = "credibil" }
credibil-otel = { version = "0.6.0", registry = "credibil" }

# interally referenced crates
be-azure = { path = "crates/be-azure", version = "0.19.0", registry = "credibil" }
be-kafka = { path = "crates/be-kafka", version = "0.19.0", registry = "credibil" }
be-mongodb = { path = "crates/be-mongodb", version = "0.19.0", registry = "credibil" }
be-nats = { path = "crates/be-nats", version = "0.19.0", registry = "credibil" }
be-opentelemetry = { path = "crates/be-opentelemetry", version = "0.19.0", registry = "credibil" }
be-postgres = { path = "crates/be-postgres", version = "0.19.0", registry = "credibil" }
be-redis = { path = "crates/be-redis", version = "0.19.0", registry = "credibil" }
buildgen = { path = "crates/buildgen", version = "0.19.0" }
kernel = { path = "crates/kernel", version = "0.19.0", registry = "credibil" }
wasi-blobstore = { path = "crates/wasi-blobstore", version = "0.19.0", registry = "credibil" }
wasi-http = { path = "crates/wasi-http", version = "0.19.0", registry = "credibil" }
wasi-identity = { path = "crates/wasi-identity", version = "0.19.0", registry = "credibil" }
wasi-keyvalue = { path = "crates/wasi-keyvalue", version = "0.19.0", registry = "credibil" }
wasi-messaging = { path = "crates/wasi-messaging", version = "0.19.0", registry = "credibil" }
wasi-otel = { path = "crates/wasi-otel", version = "0.19.0", registry = "credibil" }
wasi-otel-attr = { path = "crates/wasi-otel-attr", version = "0.19.0", registry = "credibil" }
wasi-sql = { path = "crates/wasi-sql", version = "0.19.0", registry = "credibil" }
wasi-vault = { path = "crates/wasi-vault", version = "0.19.0", registry = "credibil" }
wasi-websockets = { path = "crates/wasi-websockets", version = "0.19.0", registry = "credibil" }

[patch.crates-io]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-40.0.0" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-40.0.0" }
wasmtime-wasi-http = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-40.0.0" }
wasmtime-wasi-io = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-40.0.0" }
