[package]
name = "be-azure"
description = "Azure resource provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
azure_core = "0.30.1"
azure_identity = "0.30.0"
azure_security_keyvault_secrets = "0.9.0"
base64ct.workspace = true
fromenv.workspace = true
futures.workspace = true
http.workspace = true
kernel.workspace = true
tracing.workspace = true
wasi-identity.workspace = true
wasi-vault.workspace = true
wasip3.workspace = true
