[package]
name = "be-opentelemetry"
description = "OpenTelemetry gRPC resource provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
fromenv.workspace = true
futures.workspace = true
kernel.workspace = true
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic"] }
tonic = "0.14.2"
tracing.workspace = true
wasi-otel.workspace = true

