[package]
name = "be-postgres"
description = "Postgres resource provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
chrono.workspace = true
deadpool-postgres = { version = "0.14", default-features = false, features = ["rt_tokio_1"] }
fromenv.workspace = true
futures.workspace = true
kernel.workspace = true
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = { version = "0.13", default-features = false }
tracing.workspace = true
wasi-sql.workspace = true
webpki-roots = { version = "1.0", default-features = false }
