[package]
name = "be-redis"
description = "Redis resource provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
fromenv.workspace = true
futures.workspace = true
redis = { version = "1.0.1", features = ["connection-manager", "tokio-rustls-comp"] }
kernel.workspace = true
tracing.workspace = true
wasi-keyvalue.workspace = true
