[package]
name = "messaging-nats"
description = "NATS messaging provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
futures.workspace = true
nkeys = { version = "0.4.5" }
runtime.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasi-messaging.workspace = true
