[package]
name = "mongodb"
description = "MongoDB resource provider"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
mongodb.workspace = true
runtime.workspace = true
tracing.workspace = true
