[package]
name = "nats"
description = "NATS resource provider"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
nkeys = { version = "0.4.5" }
runtime.workspace = true
tracing.workspace = true
