[package]
name = "res-azkeyvault"
description = "Azure Key Vault resource provider"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
azure_core.workspace = true
azure_identity.workspace = true
azure_security_keyvault_secrets.workspace = true
runtime.workspace = true
tracing.workspace = true
