[package]
name = "res-azure"
description = "Azure resource provider"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
azure_core.workspace = true
azure_identity.workspace = true
azure_security_keyvault_secrets.workspace = true
base64ct.workspace = true
fromenv.workspace = true
futures.workspace = true
http.workspace = true
runtime.workspace = true
tracing.workspace = true
wasi-identity.workspace = true
wasi-vault.workspace = true
wasip3.workspace = true
