[package]
name = "res-kafka"
description = "Kafka provider for messaging"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
serde_json.workspace = true
tracing.workspace = true
wasi-messaging.workspace = true
jsonschema = "0.30.0"
schema-registry-client = { version = "0.4.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
runtime.workspace = true
rdkafka = { version = "0.38", features = ["ssl-vendored", "cmake-build", "tokio"] }
